--- a/01-tamagotchi-03-hello-world-advanced/Cargo.toml
+++ b/01-tamagotchi-03-hello-world-advanced/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 path = "lib.rs"
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet"}
+gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "946ac47"}
 parity-scale-codec = { version = "3", default-features = false }
 scale-info = { version = "2", default-features = false }
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
 
 [dev-dependencies]
-gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
+gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
