--- a/01-tamagotchi-04-program-state/Cargo.toml
+++ b/01-tamagotchi-04-program-state/Cargo.toml
@@ -8,12 +8,19 @@ edition = "2021"
 path = "lib.rs"
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet"}
-hello_world_io = { path = "io" }
+gstd.workspace = true
+hello_world_io.workspace = true
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
-hello_world_io = { path = "io" }
+gear-wasm-builder.workspace = true
+hello_world_io.workspace = true
 
 [dev-dependencies]
-gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
+gtest.workspace = true
+
+[workspace.dependencies]
+gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "946ac47"}
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
+gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
+gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
+hello_world_io = { path = "io" }
