add gear binary

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,7 @@ tasks:
       source ~/.bashrc
       sudo wget -c https://github.com/WebAssembly/binaryen/releases/download/version_105/binaryen-version_105-x86_64-linux.tar.gz -O - | sudo tar -xz -C /tmp/
       sudo cp /tmp/binaryen-version_105/bin/wasm-opt /usr/bin/
+      curl -sL https://get.gear.rs/gear-v0.3.2-x86_64-unknown-linux-gnu.tar.xz | sudo tar -xvJC /usr/bin/
     init: |
       gp open README.md
       clear && printf '\e[3J' && history -c
