--- a/01-tamagotchi-01-hello-world/Cargo.toml
+++ b/01-tamagotchi-01-hello-world/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 path = "lib.rs"
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "946ac47"}
+gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "v0.3.2"}
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
 
 [dev-dependencies]
-gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
+gtest = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
