--- a/01-tamagotchi-05-upload-program/Cargo.toml
+++ b/01-tamagotchi-05-upload-program/Cargo.toml
@@ -19,8 +19,10 @@ hello_world_io.workspace = true
 gtest.workspace = true
 
 [workspace.dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "946ac47"}
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
-gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
-gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47"}
+gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "v0.3.2"}
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
+gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2" }
+gtest = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
 hello_world_io = { path = "io" }
+parity-scale-codec = { version = "3", default-features = false }
+scale-info = { version = "2", default-features = false }
