--- a/01-tamagotchi-05-upload-program/.env
+++ b/01-tamagotchi-05-upload-program/.env
@@ -1,5 +1,7 @@
-RPC_NODE=wss://rpc-node.gear-tech.io
+RPC_NODE=wss://testnet.vara.rs
+INIT_PAYLOAD='"Hello, world! (test deploy)"'
+# RPC_NODE=wss://rpc-node.gear-tech.io
 # RPC_NODE=ws://127.0.0.1:9944
 # RPC_NODE=wss://stable-testnet.gear-tech.io
 # RPC_NODE=wss://rpc.vara-network.io
-PROGRAM_NAME=hello-world
+PROGRAM_NAME=deploy-hello-world
