--- a/01-tamagotchi-06-homework/.env
+++ b/01-tamagotchi-06-homework/.env
@@ -1,4 +1,6 @@
-RPC_NODE=wss://rpc-node.gear-tech.io
+RPC_NODE=wss://testnet.vara.rs
+INIT_PAYLOAD='"Hacker Mouse"'
+# RPC_NODE=wss://rpc-node.gear-tech.io
 # RPC_NODE=ws://127.0.0.1:9944
 # RPC_NODE=wss://stable-testnet.gear-tech.io
 # RPC_NODE=wss://rpc.vara-network.io
