--- a/01-tamagotchi-04-program-state/Cargo.toml
+++ b/01-tamagotchi-04-program-state/Cargo.toml
@@ -14,6 +14,7 @@ hello_world_io.workspace = true
 [build-dependencies]
 gear-wasm-builder.workspace = true
 hello_world_io.workspace = true
+gmeta.workspace = true
 
 [dev-dependencies]
 gtest.workspace = true
